# gigachat

./: Cargo.toml  download.sh
src/: lib.rs  main.rs  models.rs  startup.rs
src/routes/: conversation.rs  mod.rs
tests/api/: health_check.rs  helpers.rs
