[package]
name = "gigachat-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gigachat-backend"
path = "src/main.rs"

[lib]
path = "src/lib.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = {version = "0.8.5"}
thiserror = "1.0"
anyhow = "1.0"

# Http client like axios
[dependencies.reqwest]
version="0.11"
default-features = false
# need json to deserialize / serialize JSON payloads
# rustls-tls will not depends on any system library in order to make it portable


features=["json", "rustls-tls","cookies"]
[dev-dependencies]
wiremock = "0.5.19"

[profile.dev.package.ggml-sys]
opt-level = 3